<resources>
    <string name="app_name" translatable="false">Go4Lunch</string>
    <string name="facebook_application_id" translatable="false">397805432001964</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb397805432001964</string>
    <string name="your_lunch">Your Lunch</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="go4lunch" translatable="false">Go4Lunch</string>
    <string name="user_full_name">USER FULL NAME</string>
    <string name="user_mail_string">user@mail.com</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="open_until">Open until: </string>

    <!-- BOTTOM NAVIGATION VIEW -->
    <string name="bottom_navigation_menu_map">Map view</string>
    <string name="bottom_navigation_menu_list">List View</string>
    <string name="bottom_navigation_menu_workmates">Workmates</string>
    <string name="submit">center view</string>
    <string name="Open">Open</string>
    <string name="Close">Closed</string>
    <string name="like_btn">Like</string>
    <string name="call_btn">Call</string>
    <string name="website_btn">Website</string>
    <string name="not_decided">hasn\'t decided yet</string>
    <string name="choose">choose to eat at</string>
    <string name="choose_notification">You choose to eat at %1$s</string>
    <string name="workmates_notification">with : %1$s</string>
    <string name="delete_btn_text">Delete account</string>
    <string name="restaurant_range">Show the restaurant around you : </string>
    <string name="meters">%1$d meters</string>
    <string name="notification_status_label">Notification status :</string>
    <string name="language_settings_label">Language : </string>
    <string name="settings_save_button_text">Save</string>
    <string name="search">Search</string>
    <string name="im_hungry">I\'m hungry !</string>
    <string name="available_workmates">Available workmates</string>
    <string name="phone_call">Allow phone call ?</string>
    <string name="bottom_navigation_menu_chat">Live chat</string>
    <string name="your_message" >Your message</string>


    <string-array name="language_array">
        <item>Auto</item>
        <item>English</item>
        <item>French</item>
    </string-array>


</resources>