<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"

    tools:context=".ui.SettingsActivity">

    <TextView
        android:id="@+id/seekbar_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/range_picker"
        android:text="@string/restaurant_range"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/range_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/seekbar_label"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/range_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="20000"
        android:min="500"
        android:paddingBottom="30dp"
        android:progress="1500"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seekbar_label" />

    <TextView
        android:id="@+id/notification_switch_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:labelFor="@id/notification_switch"
        android:paddingBottom="30dp"
        android:text="@string/notification_status_label"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/range_picker" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/notification_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        app:layout_constraintStart_toEndOf="@id/notification_switch_label"
        app:layout_constraintTop_toBottomOf="@id/range_picker" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_save_button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notification_switch"
        tools:layout_editor_absoluteY="170dp" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>