<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/profile_activity_nav_header">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go4lunch"
        android:textSize="45sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/container"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_image"
            android:background="@drawable/ic_baseline_account_circle_24"
            app:layout_constraintStart_toStartOf="@id/container"
            app:layout_constraintTop_toTopOf="@id/container"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/user_image"
            app:layout_constraintTop_toTopOf="@id/user_image"
            android:id="@+id/user_name"
            android:text="@string/user_full_name"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="19sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/user_name"
            app:layout_constraintStart_toEndOf="@id/user_image"
            android:id="@+id/user_mail"
            android:textSize="13sp"
            android:textColor="@color/white"
            android:text="@string/user_mail_string" />





    </androidx.constraintlayout.widget.ConstraintLayout>





</LinearLayout>